# water-asset-system

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: assets.py  inspections.py  maintenance_jobs.py
docs/adr/: 0001-post-job-condition-drives-risk-score.md
tests/: conftest.py  test_assets.py  test_inspections.py  test_maintenance_job_model.py  test_maintenance_jobs.py
