[project]
name = "water-asset-system"
version = "0.1.0"
description = "A small FastAPI + SQLAlchemy water asset management demo for refreshing Python."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite",
    "pydantic>=2",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
# asyncio_mode=auto means you don't need @pytest.mark.asyncio on every test.
asyncio_mode = "auto"
# Each test function gets its own event loop(default and safest scope)
asyncio_default_fixture_loop_scope = "function"

testpaths = ["tests"]
